--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,7 @@
 
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.6.0</version>
                 <configuration>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -224,6 +225,7 @@
                     <archive>
                         <manifest>
                             <mainClass>cn.gdrfgdrf.ConnectComputerComputer.App</mainClass>
+                            <addClasspath>true</addClasspath>
                         </manifest>
                     </archive>
                 </configuration>
@@ -236,6 +238,28 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>com.github.wvengen</groupId>
+                <artifactId>proguard-maven-plugin</artifactId>
+                <version>2.6.0</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>proguard</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <proguardVersion>7.2.2</proguardVersion>
+                    <injar>ConnectComputerComputer-1.0-jar-with-dependencies.jar</injar>
+                    <outjar>ConnectComputerComputer-1.0-pg.jar</outjar>
+                    <proguardInclude>${project.basedir}/proguard.cfg</proguardInclude>
+                    <addManifest>true</addManifest>
+                    <addMavenDescriptor>true</addMavenDescriptor>
+                </configuration>
             </plugin>
         </plugins>
     </build>
