--- a/core/pom.xml
+++ b/core/pom.xml
@@ -208,7 +208,7 @@
         <executions>
           <execution>
             <id>compile</id>
-            <phase>compile</phase>
+            <phase>process-sources</phase>
             <goals>
               <goal>compile</goal>
             </goals>
@@ -228,53 +228,6 @@
         </executions>
         <configuration>
           <jvmTarget>17</jvmTarget>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>3.6.0</version>
-        <configuration>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-          <archive>
-            <manifest>
-              <mainClass>cn.gdrfgdrf.ConnectComputerComputer.App</mainClass>
-              <addClasspath>true</addClasspath>
-            </manifest>
-          </archive>
-        </configuration>
-        <executions>
-          <execution>
-            <id>make-assembly</id>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>com.github.wvengen</groupId>
-        <artifactId>proguard-maven-plugin</artifactId>
-        <version>2.6.0</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>proguard</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <proguardVersion>7.2.2</proguardVersion>
-          <injar>${project.artifactId}-${project.version}-jar-with-dependencies.jar</injar>
-          <outjar>${project.artifactId}-${project.version}-pg.jar</outjar>
-          <proguardInclude>${project.basedir}/proguard.cfg</proguardInclude>
-          <addManifest>true</addManifest>
-          <addMavenDescriptor>true</addMavenDescriptor>
         </configuration>
       </plugin>
     </plugins>
