--- a/packer/proguard.cfg
+++ b/packer/proguard.cfg
@@ -34,6 +34,7 @@
 -keep class com.sun.jna.** { <methods>; <fields>; }
 -keep class * implements com.sun.jna.** { <methods>; <fields>; }
 
+-dontwarn lombok.**
 -dontwarn okhttp3.**
 -dontwarn okio.**
 -dontwarn kotlinx.coroutines.**
