--- a/pom.xml
+++ b/pom.xml
@@ -27,19 +27,27 @@
     <packaging>pom</packaging>
     <name>parent</name>
 
+    <properties>
+        <packer.finalName>ConnectComputer-${parent.version}</packer.finalName>
+        <packer.mainClass>cn.gdrfgdrf.ConnectComputerComputer.App</packer.mainClass>
+    </properties>
+
     <modules>
         <module>core</module>
+        <module>api</module>
+        <module>packer</module>
     </modules>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
                     <source>17</source>
                     <target>17</target>
+                    <outputFileName>${packer.finalName}</outputFileName>
                 </configuration>
             </plugin>
         </plugins>
