feat: add basic plugin support
BREAKING CHANGE: Basic plugin support.

--- a/packer/proguard.cfg
+++ b/packer/proguard.cfg
@@ -6,11 +6,15 @@
 -keepattributes Exceptions,InnerClasses,Signature,Deprecated,SourceFile,LineNumberTable,*Annotation*,EnclosingMethod
 -keepclassmembers public class * { void set*(***);*** get*(); }
 
+-keepclassmembers class * { @cn.gdrfgdrf.ConnectComputerComputer.Annotation.Keep *; }
+-keepclassmembernames class * { @cn.gdrfgdrf.ConnectComputerComputer.Annotation.Keep *; }
+
 -keep class cn.gdrfgdrf.ConnectComputerComputer.**
 -keep class cn.gdrfgdrf.ConnectComputerComputer.Data.Bean.** { *; }
 -keep class cn.gdrfgdrf.ConnectComputerComputer.Client.HTTP.Result.Information.** { *; }
 -keep class cn.gdrfgdrf.Protobuf.** { <fields>; }
 -keepclassmembernames class cn.gdrfgdrf.Protobuf.** { *; }
+-keep class cn.gdrfgdrf.ConnectComputerComputer.Api.** { *; }
 
 -keep class org.slf4j.**
 -keep class ch.qos.logback.**
@@ -21,9 +25,6 @@
 -keepclassmembernames class io.netty.util.ReferenceCountUtil { <methods>; }
 -keep class io.netty.channel.AbstractChannel { *; }
 -keep class * implements io.netty.buffer.ByteBufAllocator { <methods>; }
-
--keepclassmembers class * { @cn.gdrfgdrf.ConnectComputerComputer.Annotation.Keep *; }
--keepclassmembernames class * { @cn.gdrfgdrf.ConnectComputerComputer.Annotation.Keep *; }
 
 -keepclassmembers class * extends java.lang.Enum {
     <fields>;
