build: update to 1.0.1.20240217, support Computer 1.2.0.20240217

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>cn.gdrfgdrf.connectComputer</groupId>
   <artifactId>ConnectComputerServer</artifactId>
-  <version>1.0</version>
+  <version>1.0.1.20240217</version>
   <packaging>jar</packaging>
 
   <parent>
