--- a/packer/proguard.cfg
+++ b/packer/proguard.cfg
@@ -35,6 +35,8 @@
 -keep class com.sun.jna.** { <methods>; <fields>; }
 -keep class * implements com.sun.jna.** { <methods>; <fields>; }
 
+-keep class com.google.protobuf.** { <methods>; }
+
 -dontwarn lombok.**
 -dontwarn okhttp3.**
 -dontwarn okio.**
@@ -42,6 +44,7 @@
 -dontwarn io.netty.**
 -dontwarn jtermios.**
 -dontwarn ch.qos.logback.**
+-dontwarn com.pty4j.**
 
 -dontnote *.**
 
